<resources>
    <string name="app_name">חבר</string>
    <string name="charge_blue">הטען כרטיס כחול</string>
    <string name="hever_user">תעודת זהות</string>
    <string name="hever_pass">סיסמא</string>
    <string name="hever_login">התחבר</string>
    <string name="category_search">חפש לפי קטגוריה</string>
    <string name="json_error">קרתה שגיאה בטעינת קובץ המסעדות</string>
    <string name="location_error">שגיאה במיקום המכשיר</string>
    <string name="location_accuracy_error">יש בעיה בדיוק מיקום</string>
    <string name="no_location_error">לא ניתנה הרשאה למיקום, המיקום לא יהיה פעיל</string>
    <string name="no_categories">אנא בחר קטגוריה</string>
    <string name="select_all">!בא לי הכל</string>
    <string name="label">מה בא לך ?</string>
    <string name="deselect_all">בטל הכל</string>

    <string name="kosher_label">רק כשר</string>
    <string name="kosher_without_permission">תפריט כשר ללא תעודה</string>

    <string name="database_update_success">בוצע עדכון למסעדות</string>
    <string name="database_first_update">מבצע עדכון ראשוני</string>

    <string name="dialog_label">כל המידע באפליקציה לקוח מהאתר הרשמי של מועדון חבר.</string>
    <string name="dialog_label_2">אם בכל זאת מצאתם טעות במידע, נשמח אם תוכלו לעדכן זאת ובכך לעזור לכולם</string>
    <string name="autocomplete_hint">הגדר מיקום אחר</string>
    <string name="autocomplete_hint_current_location">מוגדר מיקום עצמי</string>
    <string name="permission_denied_explanation">test value</string>
    <string name="settings">test value 2</string>
    <string name="permission_rationale">test value 3</string>

    <string name="google_places_api_key">AIzaSyD-mIfTtSyyCXwpZxYhhoaIZpSUCrXmyAY</string>
</resources>
