<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_front"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#c8d4c7"
    tools:context="com.alex.heverrest.FrontActivity"
    android:layoutDirection="rtl"
    android:textDirection="rtl">

    <Button
        android:id="@+id/btnContact"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:layout_marginStart="7dp"
        android:background="@drawable/chat_ico"/>

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon"/>

    <TextView
        android:id="@+id/tvLabel"
        android:text="@string/label"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivIcon"/>

    <fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_above="@+id/llButtons"
        />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/llSubTypes"
        android:layout_alignEnd="@+id/btnSearchCategory"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSelectAll"
            style="@style/CustomButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="8"
            android:text="@string/select_all" />

        <Button
            android:id="@+id/btnDeSelectAll"
            style="@style/CustomButtonOrange"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_weight="0.1"
            android:text="@string/deselect_all" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSubTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/btnSearchCategory">
        <LinearLayout
            android:id="@+id/llSybType1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCatItalian"
                android:text="איטלקי"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatAsian"
                android:text="אסייתי"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatMexican"
                android:text="מקסיקני"
                style="@style/Category"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llSybType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCatFrench"
                android:text="צרפתי"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatVegan"
                android:text="צמחוני-טבעוני"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatSandwiches"
                android:text="כריכים-סלטים"
                style="@style/Category"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llSybType3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCatSweets"
                android:text="מתוקים-קינוחים"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatMeat"
                android:text="בשרים"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatCoffee"
                android:text="בית קפה"
                style="@style/Category"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llSybType4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCatSushi"
                android:text="סושי"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatDairy"
                android:text="חלבי"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatFish"
                android:text="דגים"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatMiddleEastern"
                android:text="מזרחי"
                style="@style/Category"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llSybType5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCatBar"
                android:text="בר-פאב"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvCatMediterranean"
                android:text="ים-תיכוני"
                style="@style/Category"
                />
            <TextView
                android:id="@+id/tvKosher"
                android:text="@string/kosher_label"
                style="@style/Category"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_margin="10dp"
        android:text="@string/category_search"
        android:id="@+id/btnSearchCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/CustomButtonGreen"
        android:visibility="invisible"/>
    <ProgressBar
        android:id="@+id/pbDatabaseUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        />


</RelativeLayout>
